--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "@cosmicjs/sdk": "^1.5.5"
   },
-  "devDependencies": {
+"devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -27,6 +27,7 @@
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "glob": "^10.3.10"
+    "glob": "^10.3.10",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
